--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "client": "cd client && npm start"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   }
